feat: 重构主页组件，添加FigmaCard和HeaderBg，优化展示结构并删除DeveloperCard

--- a/content/posts/first-post.mdx
+++ b/content/posts/first-post.mdx
@@ -1,12 +1,15 @@
 ---
-title: 第一篇博客文章
-description: 这是我的第一篇博客文章的简介...
+title: React UI Runtime
+description: 
+    How do you create compelling presentations that wow your colleagues and
+    impress your managers?
 date: 2024-03-21
 tags:
   - nextjs
   - blog
 ---
 
-# 第一篇博客文章
+# React UI Runtime
 
-这里是文章的内容... 
+How do you create compelling presentations that wow your colleagues and
+    impress your managers?
