feat: 在 Flutter 与原生平台的交互文档中，增加了 MethodChannel 和 EventChannel 的常见应用场景及示例，增强了内容的实用性和可读性。

--- a/content/posts/flutter-channel.mdx
+++ b/content/posts/flutter-channel.mdx
@@ -14,7 +14,14 @@ Flutter 为了实现与原生平台（Android 和 iOS）的通信，提供了一
 
 ### 一、MethodChannel
 
-`MethodChannel` 主要用于 Flutter 和原生平台之间的**方法调用**。
+`MethodChannel` 主要用于 Flutter 和原生平台之间的**方法调用**。常见应用场景有：
+
+- 调用原生功能/平台 API，例如获取设备信息、调用原生相机/相册、文件系统等
+- 调用原生 SDK / 第三方库，例如支付SDK、广告SDK、社交分享SDK等
+- 访问系统服务，例如后台启动服务、原生通知、开启Wi-Fi、蓝牙等
+- 平台独有逻辑，例如Android的Intent跳转，IOS的权限管理、获取设备信息(品牌、型号、系统版本等)
+
+示例如下：
 
 #### 1. Flutter 端
 
@@ -90,7 +97,14 @@ import UIKit
 
 ### 二、EventChannel
 
-`EventChannel` 用于从原生平台向 Flutter 端发送**事件流**，比如原生传感器数据、网络变化等。
+`EventChannel` 用于从原生平台向 Flutter 端发送**事件流**，专用于持续、流式的数据通信，比如原生传感器数据、网络变化等。常见应用场景有：
+- 监听系统传感器数据，例如加速度、陀螺仪、磁力计等
+- 定位服务的持续位置更新，例如GPS定位等
+- 监听周边蓝牙设备广播和可用WIFI网络列表
+- 监听系统事件，例如锁屏、解锁、截屏等
+- 系统状态变化，例如网络状态变化、电量变化、来电/挂断状态、耳机插入/拔出状态等
+
+示例如下：
 
 #### 1. Flutter 端
 
